--- a/src/components/ItemIcon/ItemIcon.module.scss
+++ b/src/components/ItemIcon/ItemIcon.module.scss
@@ -5,7 +5,7 @@
   display: inline-block;
   height: 2.2ch;
   width: auto;
-  vertical-align: middle;
+  vertical-align: text-top;
 
   & + & {
     margin-left: 0.5ch;
