--- a/src/components/ResourceSetDisplay/ResourceSetDisplay.module.scss
+++ b/src/components/ResourceSetDisplay/ResourceSetDisplay.module.scss
@@ -37,13 +37,13 @@
       white-space: nowrap;
 
       & + .resource {
-        margin-left: 0.5ch;
+        margin-left: 0.8ch;
       }
     }
 
     .icon {
       display: inline;
-      vertical-align: middle;
+      vertical-align: text-top;
 
       & + .icon {
         margin-left: 0.2ch;
@@ -53,7 +53,7 @@
     .amount {
       display: inline;
       vertical-align: baseline;
-      margin-left: 0.5ch;
+      margin-left: 0.2ch;
     }
   }
 
